<resources>
    <string name="app_name">CampusExpense Manager</string>
    <string name="username">Username</string>
    <string name="enter_id">Enter Username</string>
    <string name="password">Password</string>
    <string name="enter_password">Enter Password</string>
    <string name="ok">Submit</string>
    <string name="cancel">CANCEL</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="login1">Submit</string>
    <string name="username1">Username</string>
    <string name="enter_id1">Enter Username</string>
    <string name="password1">Password</string>
    <string name="enter_password1">Enter Password</string>
    <string name="login">Login</string>
    <string name="logout">Logout</string>
    <string name="hello_it0602_android_java">Hello IT0602 - Android Java</string>
    <string name="email">Email</string>
    <string name="phone">Phone</string>
    <string name="login2">Login</string>
    <string name="cancel2">Cancel</string>
    <string name="it0602">IT0602</string>
    <string name="welcom_to_constraint_layout">Welcom to constraint layout</string>
    <string name="account">Account</string>
    <string name="email1">Email</string>
    <string name="password2">Password</string>
    <string name="welcome_to_table_layout">welcome to table layout</string>
    <string name="url">URL</string>
    <string name="submit">Submit</string>
    <string name="cancel3">cancel</string>
    <string name="fullname">FullName</string>
    <string name="email3">email</string>
    <string name="phone2">phone</string>
    <string name="address2">address</string>
    <string name="it0602_1">IT0602</string>
    <string name="tam_nguyen">Tam Nguyen</string>
    <string name="tamnguyen0824_gmail_com">tamnguyen0824@gmail.com</string>
    <string name="_03242353">03242353</string>
    <string name="hung_yen">Hung Yen</string>
    <string name="long_nguyen">Long Nguyen</string>
    <string name="longnguyen0824_gmail_com">longnguyen0824@gmail.com</string>
    <string name="_06456335">06456335</string>
    <string name="tam1232_gmail">tam1232@gmail</string>
    <string name="long123_gmail_com">long123@gmail.com</string>
    <string name="b1">b1</string>
    <string name="b2">b2</string>
    <string name="b3">b3</string>
    <string name="b4">b4</string>
    <string name="b5">b5</string>
    <string name="b6">b6</string>
    <string name="b7">b7</string>
    <string name="b8">b8</string>
    <string name="b9">b9</string>
    <string name="first_activity_running">First Activity Running</string>
    <string name="start_activity">Start Activity</string>
    <string name="second_activity_running">Second Activity Running</string>
    <string name="dong_y_voi_cac_dieu_khoan">dong y voi cac dieu khoan</string>
    <string name="age">Age</string>
    <string name="_20_age">20 age</string>
    <string name="confirm">Confirm</string>
    <string name="normal">Normal</string>
    <string name="good">Good</string>
    <string name="send_data">Send Data</string>
    <string name="vui">Đố Vui</string>
    <string name="ch_n_c_u_tr_l_i_ng">Chọn câu trả lời đúng</string>
    <string name="ki_m_tra">Kiểm tra</string>
    <string name="c_u_ti_p_theo">Câu tiếp theo</string>
    <string name="show_toast">Show toast</string>
    <string name="show_dialog">Show Dialog</string>
    <string name="home">Home</string>
    <string name="profile">Profile</string>
    <string name="setting">Setting</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home_page">Home page</string>
    <string name="profile_page">Profile page</string>
    <string name="setting_page">Setting page</string>
    <string name="_1">1</string>
    <string name="iphone_15_128gb">Iphone 15 - 128GB</string>
    <string name="_2000">2000</string>
    <string name="enter_url_website">Enter URL Website</string>
    <string name="load_website_from_url">Load website from URL</string>
    <string name="enter_phone_number">Enter phone number</string>
    <string name="call">Call</string>
    <string name="go_to_other_activity">Go to other activity</string>
    <string name="intent_second">Intent Second</string>
    <string name="back_to_activity">Back to Activity</string>
    <string name="send_data_to_other_activity">Send Data to Other Activity</string>
    <string name="id">ID</string>
    <string name="enter_username">Enter username</string>
    <string name="dashboard_view">Dashboard View</string>
    <string name="job">Job</string>
    <string name="enter_number">Enter Number</string>
    <string name="enter_number_1">Enter Number 1</string>
    <string name="enter_number_2">Enter Number 2</string>
    <string name="result">Result</string>
    <string name="plus">Plus +</string>
    <string name="clear_data">Clear Data</string>
    <string name="tracking_expenses">Tracking Expenses</string>
    <string name="enter_money">Enter Money</string>
    <string name="enter_expense">Enter Expense</string>
    <string name="save">Save</string>
    <string name="next">Next</string>
    <string name="money">Money</string>
    <string name="expense">Expense</string>
    <string name="get_data">Get Data</string>
    <string name="back">Back</string>
    <string name="register">Register</string>
    <string name="enter_email">Enter Email</string>
    <string name="sign_up">Sign Up</string>
    <string name="sign_in">Sign In</string>

</resources>