<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tv_productId"
        android:text="@string/_1"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tv_nameProduct"
        android:text="@string/iphone_15_128gb"
        android:textSize="15sp"
        android:textStyle="bold|italic"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/_2000"
        android:gravity="right"
        android:id="@+id/tv_priceProduct"
        android:textStyle="bold|italic"/>

</LinearLayout>