<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">
    <TextView
        android:id="@+id/tv_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/email"/>
    <EditText
        android:id="@+id/edit_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@id/tv_email"
        android:layout_alignBottom="@id/tv_email"
        android:layout_toEndOf="@id/tv_email"
        android:layout_marginStart="10dp"/>
    <TextView
        android:id="@+id/edit_phone"
        android:layout_marginTop="35dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/phone"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@id/edit_phone"
        android:layout_toEndOf="@id/edit_phone"
        android:layout_alignBottom="@id/edit_phone"
        android:layout_marginStart="10dp"/>
    <Button
        android:id="@+id/btn_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login2"
        android:layout_marginTop="80dp"
        android:layout_marginStart="80dp"
        android:textStyle="bold"/>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@id/btn_login"
        android:layout_marginTop="80dp"
        android:layout_marginStart="30dp"
        android:text="@string/cancel2"
        android:textStyle="bold"/>



</RelativeLayout>