<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:background="#EACCEF">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="30sp"
        android:text="@string/vui"
        android:textStyle="bold"
        android:textColor="#EC4510"
        android:layout_gravity="center"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="C1: Tôi có nhiều lỗ nhưng vẫn giữ được nước. Tôi là gì?"
        android:textSize="25sp"
        android:layout_marginTop="50dp"
        android:textColor="#0D63A6"
        />

    <RadioGroup
        android:id="@+id/rad_group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp">

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Cái rổ"
            android:textSize="20sp"
            android:id="@+id/rad1"
            android:textColor="#9A12B1"/>

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Cái chai"
            android:textSize="20sp"
            android:id="@+id/rad2"
            android:textColor="#9A12B1"/>

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Miếng bọt biển"
            android:textSize="20sp"
            android:id="@+id/rad3"
            android:textColor="#9A12B1"/>

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Cái xô"
            android:textSize="20sp"
            android:id="@+id/rad4"
            android:textColor="#9A12B1"/>
    </RadioGroup>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_check"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ki_m_tra"
            android:textSize="25sp"
            android:textColor="#10ECD7"/>

        <Button
            android:id="@+id/btn_next"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/c_u_ti_p_theo"
            android:textSize="25sp"
            android:textColor="#10ECD7"
            android:layout_marginLeft="20dp"/>

    </LinearLayout>

    <TextView
        android:id="@+id/tv_dialog"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#ff00"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"/>

</LinearLayout>
